# light_photo_bot

./: Makefile  pyproject.toml
src/: configuration.py  dispather.py
src/api/dadata/: api_requests.py  main.py
src/api/ya_disk/: api_requests.py
src/bot/: __mian__.py  dispatcher.py  dispather.py  main.py
src/bot/filters/: user_role_filter.py  yadisk_url_filter.py
src/bot/logic/: __init__.py  add_agency.py  add_photosession.py  add_service.py  ext.py  registration.py  start.py
src/bot/logic/add_agency/: __init__.py  router.py
src/bot/logic/routers/: __init__.py  start.py
src/bot/middlewares/: database_md.py
src/bot/structure/: data_structure.py
src/bot/structure/fsm/: add_agency.py  add_photosession.py
src/bot/structure/kb/: __init__.py  add_photosession_kb.py  ext.py  main_menu.py
src/db/: database.py
src/db/models/: __init__.py  agency.py  bank_accaunt.py  base.py  brocker.py  contract.py  manager.py  photographer.py  photosession.py  service.py  user.py
src/db/requests/: add_agency.py  add_photosession.py  add_service.py  add_user.py  middlewares.py
src/doc_worker/: doc_generator.py
