[tool.poetry]
name = "light-photo-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "light_photo_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
python-dotenv = "^1.0.0"
dadata = "^21.10.1"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
greenlet = "^3.0.1"
redis = "^5.0.1"
num2words = "^0.5.13"
aiohttp = "^3.9.1"
requests = "^2.31.0"
yadisk = {extras = ["async-defaults"], version = "^2.1.0"}
docx = "^0.2.4"
docxtpl = "^0.18.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
flake8 = "^6.1.0"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
